# Prototype

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake
app/: CMakeLists.txt
app/src/: app_layer.cpp  app_layer.h  main.cpp  model_layer.cpp  model_layer.h
core/: CMakeLists.txt
core/src/core/: application.cpp  application.h  event.h  imgui_layer.cpp  layer.h  log.cpp  window.cpp  window.h
core/src/core/events/: key_event.h  mouse_event.h
core/src/core/renderer/: camera.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  texture.cpp  utils.cpp  utils.h
src/: CMakeLists.txt
src/app/: main.cpp  model_layer.cpp  model_layer.h
src/core/: application.cpp  application.h  imgui_layer.cpp  imgui_layer.h  layer.h  log.cpp  log.h  window.cpp  window.h
src/core/components/: transform.cpp  transform.h
src/core/events/: application_event.h  event.h  key_codes.h  mouse_codes.h
src/core/renderer/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h
src/core/utils/: thread_pool.h
